crates/synapse-core/tests/snapshots/snapshots__event_json_shape-2.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: sample_event().summary()
---
{
  "seq": 10,
  "at": "2026-05-23T00:00:00Z",
  "source": "perception_hud",
  "kind": "hud-value-changed",
  "data_excerpt": {
    "confidence": 0.98,
    "field": "hp",
    "new": 15,
    "old": 25
  }
}
