crates/synapse-core/tests/snapshots/snapshots__geometry_json_shape-2.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: "Rect { x: -10, y: 20, w: 30, h: 40, }"
---
{
  "x": -10,
  "y": 20,
  "w": 30,
  "h": 40
}
