crates/synapse-core/tests/snapshots/snapshots__geometry_json_shape-3.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: "Size { w: 1920, h: 1080 }"
---
{
  "w": 1920,
  "h": 1080
}
