crates/synapse-core/tests/snapshots/snapshots__geometry_json_shape.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: "Point { x: -10, y: 20 }"
---
{
  "x": -10,
  "y": 20
}
