crates/synapse-core/tests/snapshots/snapshots__health_json_shape.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: "Health\n{\n    ok: true, version: \"0.1.0\".to_owned(), build: \"dev\".to_owned(), pid: 4321,\n    uptime_s: 0, tool_count: 2, tool_surface_sha256: \"0123456789abcdef\".to_owned(),\n    tool_names: vec![\"act_run_shell\".to_owned(), \"health\".to_owned()],\n    subsystems: BTreeMap::new(),\n}"
---
{
  "ok": true,
  "version": "0.1.0",
  "build": "dev",
  "pid": 4321,
  "uptime_s": 0,
  "tool_count": 2,
  "tool_surface_sha256": "0123456789abcdef",
  "tool_names": [
    "act_run_shell",
    "health"
  ],
  "subsystems": {}
}
