crates/synapse-core/tests/snapshots/snapshots__observation_json_shape.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: sample_observation()
---
{
  "seq": 123,
  "at": "2026-05-23T00:00:00Z",
  "mode": "hybrid",
  "foreground": {
    "hwnd": 4779,
    "pid": 4242,
    "process_name": "notepad.exe",
    "process_path": "C:\\Windows\\System32\\notepad.exe",
    "window_title": "Untitled - Notepad",
    "window_bounds": {
      "x": 0,
      "y": 0,
      "w": 800,
      "h": 600
    },
    "monitor_index": 0,
    "dpi_scale": 1.25,
    "profile_id": "windows.notepad",
    "is_fullscreen": false,
    "is_dwm_composed": true
  },
  "focused": {
    "element_id": "0x12ab:0a1b2c3d",
    "name": "Text Editor",
    "role": "Edit",
    "automation_id": "15",
    "bbox": {
      "x": 10,
      "y": 20,
      "w": 600,
      "h": 400
    },
    "enabled": true,
    "patterns": [
      "value",
      "text"
    ],
    "value": "hello"
  },
  "elements": [
    {
      "element_id": "0x12ab:0a1b2c3d",
      "parent": "0x12ab:ff",
      "name": "Text Editor",
      "role": "Edit",
      "automation_id": "15",
      "bbox": {
        "x": 10,
        "y": 20,
        "w": 600,
        "h": 400
      },
      "enabled": true,
      "focused": true,
      "patterns": [
        "value",
        "text"
      ],
      "children_count": 0,
      "depth": 1
    }
  ],
  "entities": [
    {
      "entity_id": "track:7",
      "track_id": 7,
      "class_label": "cursor",
      "bbox": {
        "x": 120,
        "y": 130,
        "w": 16,
        "h": 24
      },
      "confidence": 0.75,
      "first_seen_at": "2026-05-23T00:00:00Z",
      "last_seen_at": "2026-05-23T00:00:00Z",
      "velocity_px_per_s": [
        0.0,
        0.0
      ]
    }
  ],
  "hud": {
    "by_name": {
      "hp": {
        "raw_text": "15",
        "parsed": 15.0,
        "confidence": 0.98,
        "stale_ms": 16
      }
    }
  },
  "audio": {
    "rms_db": 0.0,
    "vad_speech_recent": false,
    "recent_events": []
  },
  "recent_events": [
    {
      "seq": 10,
      "at": "2026-05-23T00:00:00Z",
      "source": "perception_hud",
      "kind": "hud-value-changed",
      "data_excerpt": {
        "field": "hp",
        "new": 15
      }
    }
  ],
  "fs_recent": [],
  "diagnostics": {
    "assembled_in_ms": 4.5,
    "a11y_enabled": true,
    "pixel_enabled": true,
    "audio_enabled": false,
    "a11y_status": "healthy",
    "capture_status": "healthy",
    "detection_status": "unavailable",
    "audio_status": "disabled",
    "is_minimized": false,
    "elements_truncated": false,
    "entities_truncated": false,
    "size_bytes": 2048,
    "size_estimate_tokens": 512
  }
}
