crates/synapse-core/tests/snapshots/snapshots__perception_mode_json_shape-2.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: "PerceptionMode::PixelOnly"
---
"pixel_only"
