crates/synapse-core/tests/snapshots/snapshots__perception_mode_json_shape-3.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: "PerceptionMode::Hybrid"
---
"hybrid"
