crates/synapse-core/tests/snapshots/snapshots__perception_mode_json_shape.snap
---
source: crates/synapse-core/tests/snapshots.rs
expression: "PerceptionMode::A11yOnly"
---
"a11y_only"
